--- a/public/css/app.css
+++ b/public/css/app.css
@@ -39,20 +39,40 @@
   border-color: #ff4528 !important;
 }
 
+.cf-red:hover {
+  background-color: #ff4528 !important;
+}
+
 .cf-orange {
   border-color: #CF5100 !important;
+}
+
+.cf-orange:hover {
+  background-color: #CF5100 !important;
 }
 
 .cf-pink {
   border-color: #f717f4 !important;
 }
 
+.cf-pink:hover {
+  background-color: #f717f4 !important;
+}
+
 .cf-green {
   border-color: #47b17b !important;
 }
 
+.cf-green:hover {
+  background-color: #47b17b !important;
+}
+
 .cf-gold {
   border-color: #fffc00 !important;
+}
+
+.cf-gold:hover {
+  background-color: #fffc00 !important;
 }
 
 .blur {
@@ -1014,7 +1034,7 @@ input:focus {
 
 .skins .skins-modal {
   position: absolute;
-  z-index: 2;
+  z-index: 99;
   left: 42rem;
   width: 40rem;
   height: auto;
@@ -1247,8 +1267,17 @@ input:focus {
 
 .skins .skins-block .skins-items-wrapper .skins-items .skins-item .skins-label .skins-image {
   width: 8rem;
-  height: 8rem;
-  margin: -0.5rem 0;
+  height: 7rem;
+}
+
+.skins .skins-block .skins-items-wrapper .skins-items .skins-item .skins-label .skins-image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
 }
 
 .skins .skins-block .skins-items-wrapper .skins-items .skins-item .skins-label .skins-weapon {
@@ -1378,6 +1407,10 @@ input:focus {
   border-radius: 1rem;
   background-color: #202326;
   position: relative;
+}
+
+.content-block .upper .left .graph .lose {
+  color: #ff4528;
 }
 
 .content-block .upper .left .graph .graph-chart {
@@ -1522,6 +1555,17 @@ input:focus {
   width: 18rem;
 }
 
+.content-block .upper .right .skin .skin-image:hover ~ .tooltip {
+  display: flex !important;
+  left: 0;
+  right: 0;
+  top: 0;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+  margin: 2rem auto;
+}
+
 .content-block .upper .right .auto-text {
   width: 100%;
   font-size: 1.3rem;
@@ -1554,6 +1598,11 @@ input:focus {
   font-weight: 700;
   font-size: 1.6rem;
   padding: 0 2rem;
+}
+
+.content-block .upper .right .bet .button-disabled {
+  pointer-events: none;
+  background-color: #202326;
 }
 
 .content-block .upper .right .autos {
@@ -1595,7 +1644,7 @@ input:focus {
   font-size: 1.1rem;
   display: block;
   padding: 0.75rem 1rem;
-  border-radius: 1rem;
+  border-radius: 0.75rem;
   border: 0.2rem solid;
   border-color: #CF5100;
   margin-right: 1rem;
@@ -1669,6 +1718,7 @@ input:focus {
 
 .content-block .bets .bet .bet-skins .bet-skins-item .bet-skin:hover ~ .tooltip {
   display: flex !important;
+  bottom: -3rem;
   left: 0;
 }
 
@@ -1692,6 +1742,7 @@ input:focus {
 
 .content-block .bets .bet .bet-win-image:hover ~ .tooltip {
   display: flex !important;
+  bottom: -3rem;
   right: 0;
 }
 
@@ -1739,7 +1790,7 @@ input:focus {
   border-color: #ff4528;
 }
 
-.content-block .footer {
+.footer {
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -1748,15 +1799,15 @@ input:focus {
   padding-top: 1rem;
 }
 
-.content-block .footer .salt {
+.footer .salt {
   margin-bottom: 0.5rem;
 }
 
-.content-block .footer .agreement {
+.footer .agreement {
   text-decoration: underline;
 }
 
-.content-block .footer .agreement:hover {
+.footer .agreement:hover {
   color: white;
 }
 
@@ -1788,6 +1839,7 @@ input:focus {
   display: grid;
   grid-template-rows: 4rem 1fr 7rem;
   overflow: hidden;
+  position: relative;
 }
 
 .chat .chat-header {
@@ -1827,7 +1879,7 @@ input:focus {
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   overflow-y: auto;
   max-height: 100%;
   min-height: 100%;
@@ -1858,25 +1910,29 @@ input:focus {
   display: flex;
   flex-direction: column;
   width: 100%;
+  overflow: hidden;
 }
 
-.chat .chat-body .chat-inner .chat-message .chat-nameblock {
+.chat .chat-body .chat-inner .chat-message .chat-block .chat-nameblock {
   display: flex;
   justify-content: space-between;
   margin: 0.5rem;
   font-size: 1.25rem;
 }
 
-.chat .chat-body .chat-inner .chat-message .chat-nameblock .chat-name:visited {
+.chat .chat-body .chat-inner .chat-message .chat-block .chat-nameblock .chat-name:visited {
   color: #DBDBDB;
 }
 
-.chat .chat-body .chat-inner .chat-message .chat-text {
+.chat .chat-body .chat-inner .chat-message .chat-block .chat-text {
+  word-break: break-word;
+  line-height: 1.25;
   font-size: 1.2rem;
   border-radius: 0.75rem;
   padding: 1.5rem 1rem;
   background-color: #131719;
   width: 100%;
+  overflow: hidden;
 }
 
 .chat .chat-body .chat-inner .chat-message:first-child {
@@ -1917,6 +1973,10 @@ input:focus {
   outline: none;
 }
 
+.chat .chat-send .button-disabled {
+  pointer-events: none;
+}
+
 .chat .chat-send .chat-send-button {
   padding: 1rem;
 }
@@ -1924,6 +1984,162 @@ input:focus {
 .chat .chat-send .chat-send-button .chat-send-icon {
   color: white;
   font-size: 2rem;
+}
+
+.draw {
+  display: grid;
+  grid-template-rows: 3rem 1fr auto auto;
+  width: 100%;
+  background-color: #202326;
+  border-radius: 0 1.5rem 0 0;
+  padding: 2rem;
+}
+
+.draw .draw-header {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.draw .draw-header .draw-header-text {
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin: 0 1rem;
+}
+
+.draw .draw-header .draw-header-time {
+  color: #CF5100;
+  font-size: 1.7rem;
+}
+
+.draw .draw-header .draw-header-icon {
+  font-size: 2.2rem;
+}
+
+.draw .draw-body {
+  display: flex;
+  justify-content: space-evenly;
+  height: 15rem;
+}
+
+.draw .draw-body .draw-body-image {
+  height: 15rem;
+}
+
+.draw .draw-body .draw-body-r {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.draw .draw-body .draw-body-r .draw-body-text {
+  font-size: 1.5rem;
+}
+
+.draw .draw-body .draw-body-r .draw-body-stext {
+  font-size: 1.25rem;
+  color: #CF5100;
+  margin-top: 0.5rem;
+  text-align: center;
+}
+
+.draw .draw-body .draw-body-r .draw-body-ttext {
+  font-size: 1.25rem;
+  color: #CF5100;
+  margin-top: 0.25rem;
+  text-align: center;
+}
+
+.draw .draw-body .draw-body-r .disabled {
+  background-color: #131719;
+  pointer-events: none;
+}
+
+.draw .draw-body .draw-body-r .draw-body-button {
+  margin-top: 2rem;
+  padding: 2rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.draw .draw-no {
+  height: 15rem;
+  font-size: 1.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  line-height: 1.5;
+  flex-direction: column;
+}
+
+.draw .draw-no .draw-no-icon {
+  margin-bottom: 1rem;
+  font-size: 3rem;
+}
+
+.draw .draw-count {
+  border-radius: 0.5rem;
+  background-color: #131719;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 1.5rem;
+  font-size: 1.4rem;
+  width: 35rem;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+}
+
+.draw .draw-last {
+  border-radius: 0.5rem;
+  background-color: #131719;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.4rem;
+  padding: 1rem 1.5rem;
+  width: 35rem;
+  margin: 0 auto;
+}
+
+.draw .draw-last .draw-last-image {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 1rem;
+}
+
+.accordion {
+  background-color: #202326;
+  color: #DBDBDB;
+  cursor: pointer;
+  padding: 2rem;
+  width: 100%;
+  border: none;
+  text-align: left;
+  font-size: 1.7rem;
+  margin: 1rem 0;
+  outline: none;
+}
+
+.active,
+.accordion:hover {
+  background-color: #2c3235;
+}
+
+.panel {
+  position: relative;
+  background-color: #202326;
+  color: #DBDBDB;
+  font-weight: 400;
+  padding: 1.25rem;
+  font-size: 1.4rem;
+  overflow: hidden;
+  box-sizing: border-box;
+  display: none;
+  margin-bottom: 1.5rem;
 }
 
 .preload * {
@@ -2014,9 +2230,17 @@ header .header-logo .logo-elem:hover {
   background-color: #2c3235;
 }
 
+header .header-logo .logo-elem .logo-volume {
+  width: 2rem;
+}
+
 header .header-logo .logo-elem .logo-icon {
   top: -0.2rem;
   position: relative;
+}
+
+header .header-logo .logo-elem .logo-langs {
+  display: none;
 }
 
 header nav {
@@ -2098,8 +2322,8 @@ header .header-soc .header-soc-online .online-number .online-circle {
   font-size: 0.8rem;
   position: relative;
   margin-right: 0.2rem;
-  -webkit-animation: blink 800ms alternate infinite;
-  animation: blink 800ms alternate infinite;
+  -webkit-animation: blink 500ms alternate infinite;
+  animation: blink 500ms alternate infinite;
 }
 
 header .header-soc .fab {
@@ -2113,14 +2337,20 @@ header .header-right {
   justify-content: center;
 }
 
-header .header-right .header-right-image {
+header .header-right .header-right-user {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+header .header-right .header-right-user .header-right-image {
   border-radius: 1rem;
   width: 4rem;
   height: 4rem;
   margin-right: 1rem;
 }
 
-header .header-right .header-right-nameblock {
+header .header-right .header-right-user .header-right-nameblock {
   font-size: 1.2rem;
   margin: 0 1rem;
   display: flex;
@@ -2129,19 +2359,19 @@ header .header-right .header-right-nameblock {
   flex-direction: column;
 }
 
-header .header-right .header-right-nameblock .header-right-money {
+header .header-right .header-right-user .header-right-nameblock .header-right-money {
   color: #CF5100;
   margin-top: 0.3rem;
 }
 
-header .header-right .header-right-nameblock .header-right-name {
+header .header-right .header-right-user .header-right-nameblock .header-right-name {
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 15rem;
 }
 
 header .header-right .header-right-button {
-  font-size: 1.2rem;
+  font-size: 1.25rem;
   font-weight: 700;
   padding: 1.25rem;
 }
@@ -2188,94 +2418,39 @@ main {
   overflow: hidden;
 }
 
-.draw {
-  display: grid;
-  grid-template-rows: 4rem 1fr 5rem;
-  width: 100%;
-  background-color: #202326;
-  border-radius: 0 1.5rem 0 0;
-  padding: 2rem;
-}
-
-.draw .draw-header {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-bottom: 1rem;
-}
-
-.draw .draw-header .draw-header-text {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 0 1rem;
-}
-
-.draw .draw-header .draw-header-time {
-  color: #CF5100;
-  font-size: 2rem;
-}
-
-.draw .draw-header .draw-header-icon {
-  font-size: 2.5rem;
-}
-
-.draw .draw-body {
-  display: flex;
-  justify-content: space-evenly;
-  height: 17rem;
-}
-
-.draw .draw-body .draw-body-image {
-  height: 17rem;
-}
-
-.draw .draw-body .draw-body-r {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.draw .draw-body .draw-body-r .draw-body-text {
-  font-size: 1.5rem;
-}
-
-.draw .draw-body .draw-body-r .draw-body-stext {
-  font-size: 1.25rem;
-  color: #CF5100;
-  margin-top: 0.5rem;
-  text-align: center;
-}
-
-.draw .draw-body .draw-body-r .draw-body-ttext {
-  font-size: 1.25rem;
-  color: #CF5100;
-  margin-top: 0.25rem;
-  text-align: center;
-}
-
-.draw .draw-body .draw-body-r .draw-body-button {
-  margin-top: 2rem;
-  padding: 2rem;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.draw .draw-count {
-  border-radius: 0.5rem;
-  background-color: #131719;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1.5rem;
-  font-size: 1.5rem;
-  width: 35rem;
-  margin: 0 auto;
-}
-
 .content {
   padding: 2rem;
   overflow: hidden;
+  display: grid;
+  height: 100%;
+  grid-template-rows: 1fr auto;
+}
+
+.content .page {
+  display: grid;
+  height: 100%;
+  grid-template-rows: auto 1fr;
+}
+
+.content .page .page-header {
+  font-size: 2rem;
+  padding: 0 3rem;
+}
+
+.content .page .page-body {
+  padding: 1rem;
+  overflow: hidden;
+  height: 100%;
+}
+
+.content .page .page-body .page-scroll {
+  overflow-y: auto;
+  max-height: 100%;
+  min-height: 100%;
+}
+
+.content .page .page-body .page-scroll::-webkit-scrollbar {
+  display: none;
 }
 
 .notify {
@@ -2340,7 +2515,6 @@ main {
   width: -webkit-min-content;
   width: -moz-min-content;
   width: min-content;
-  bottom: -3rem;
   -webkit-filter: drop-shadow(0 0 0.8rem rgba(207, 81, 0, 0.7));
           filter: drop-shadow(0 0 0.8rem rgba(207, 81, 0, 0.7));
 }
