--- a/resources/sass/chat.sass
+++ b/resources/sass/chat.sass
@@ -6,6 +6,7 @@
 	display: grid
 	grid-template-rows: 4rem 1fr 7rem
 	overflow: hidden
+	position: relative
 	.chat-header
 		display: flex
 		justify-content: space-evenly
@@ -31,7 +32,7 @@
 			display: flex
 			align-items: center
 			flex-direction: column
-			padding-bottom: 2rem
+			padding-bottom: 1rem
 			overflow-y: auto
 			max-height: 100%
 			min-height: 100%
@@ -54,19 +55,23 @@
 					display: flex
 					flex-direction: column
 					width: 100%
-				.chat-nameblock
-					display: flex
-					justify-content: space-between
-					margin: 0.5rem
-					font-size: 1.25rem
-					.chat-name:visited
-						color: $c-white
-				.chat-text
-					font-size: 1.2rem
-					border-radius: 0.75rem
-					padding: 1.5rem 1rem
-					background-color: $c-main
-					width: 100%
+					overflow: hidden
+					.chat-nameblock
+						display: flex
+						justify-content: space-between
+						margin: 0.5rem
+						font-size: 1.25rem
+						.chat-name:visited
+							color: $c-white
+					.chat-text
+						word-break: break-word
+						line-height: 1.25
+						font-size: 1.2rem
+						border-radius: 0.75rem
+						padding: 1.5rem 1rem
+						background-color: $c-main
+						width: 100%
+						overflow: hidden
 				&:first-child
 					margin-top: auto !important
 			.reversed
@@ -91,6 +96,8 @@
 			&:focus
 				outline: none
 			width: 80%
+		.button-disabled
+			pointer-events: none
 		.chat-send-button
 			padding: 1rem
 			.chat-send-icon
