--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -24,6 +24,8 @@
 				border-radius: 1rem
 				background-color: $c-sec
 				position: relative
+				.lose
+					color: $c-red
 				.graph-chart
 					width: 100%
 					height: 100%
@@ -129,6 +131,14 @@
 					margin: 0 auto
 					height: 18rem
 					width: 18rem
+				.skin-image:hover ~ .tooltip
+					display: flex !important
+					left: 0
+					right: 0
+					top: 0
+					width: min-content
+					margin: 2rem auto
+
 			.auto-text
 				width: 100%
 				font-size: 1.3rem
@@ -155,6 +165,9 @@
 					font-weight: 700
 					font-size: 1.6rem
 					padding: 0 2rem
+				.button-disabled
+					pointer-events: none
+					background-color: $c-sec
 			.autos
 				margin-top: 1.5rem
 				display: flex
@@ -177,6 +190,7 @@
 		border-radius: 1rem
 		flex-direction: row
 		align-items: center
+		//justify-content: flex-end
 		overflow: hidden
 		padding: 1rem
 		margin-bottom: 2rem
@@ -184,7 +198,7 @@
 			font-size: 1.1rem
 			display: block
 			padding: 0.75rem 1rem
-			border-radius: 1rem
+			border-radius: 0.75rem
 			border: 0.2rem solid
 			border-color: $c-orange
 			margin-right: 1rem
@@ -241,6 +255,7 @@
 						z-index: 1
 					.bet-skin:hover ~ .tooltip
 						display: flex !important
+						bottom: -3rem
 						left: 0
 				.bet-addskin
 					padding: 1.5rem
@@ -257,6 +272,7 @@
 
 			.bet-win-image:hover ~ .tooltip
 				display: flex !important
+				bottom: -3rem
 				right: 0
 			.bet-coef
 				width: 10rem
@@ -286,19 +302,19 @@
 			background: linear-gradient(90deg, $c-sec 77%, rgba($c-red,0.6026785714285714) 100%)
 			.bet-coef
 				border-color: $c-red
-	.footer
-		display: flex
-		align-items: center
-		flex-direction: row
-		justify-content: space-between
-		font-size: 1.2rem
-		padding-top: 1rem
-		.salt
-			margin-bottom: 0.5rem
-		.agreement
-			text-decoration: underline
-			&:hover
-				color: white
+.footer
+	display: flex
+	align-items: center
+	flex-direction: row
+	justify-content: space-between
+	font-size: 1.2rem
+	padding-top: 1rem
+	.salt
+		margin-bottom: 0.5rem
+	.agreement
+		text-decoration: underline
+		&:hover
+			color: white
 
 @keyframes circle3d
 	from
