--- a/resources/sass/skins.sass
+++ b/resources/sass/skins.sass
@@ -8,7 +8,7 @@
 	overflow: hidden
 	.skins-modal
 		position: absolute
-		z-index: 2
+		z-index: 99
 		left: $left-width + 2rem
 		width: $left-width
 		height: auto
@@ -172,8 +172,13 @@
 							color: $c-orange
 						.skins-image
 							width: 8rem
-							height: 8rem
-							margin: -.5rem 0
+							height: 7rem
+							img
+								display: block
+								width: 100%
+								height: 100%
+								object-fit: cover
+								object-position: 50% 50%
 						.skins-weapon
 							font-weight: 800
 							font-size: 1.1rem
