--- a/resources/sass/skins.sass
+++ b/resources/sass/skins.sass
@@ -172,7 +172,7 @@
 							color: $c-orange
 						.skins-image
 							width: 8rem
-							height: 7rem
+							//height: 7rem
 							img
 								display: block
 								width: 100%
